# Embodied-AI-Data-Collection-Framework

./: README.md  pyproject.toml
examples/: record_franka_xbox.py
src/lite_lerobot_infra/: __init__.py  camera.py  features.py  recorder.py  robot.py  teleoperator.py  types.py
src/lite_lerobot_infra/cameras/: __init__.py  realsense.py
src/lite_lerobot_infra/robots/: __init__.py  franka_polymetis.py
src/lite_lerobot_infra/teleoperators/: __init__.py  xbox.py
